# anf

./: .gitignore  .gitmodules  Cargo.toml  README.adoc  build.rs  devlog.adoc
anf_deps/: Cargo.toml  lib.rs
anf_gfx/: Cargo.toml  build.rs  lib.rs  texture.rs
anf_gfx/batcher/: bufspecs.rs
crates/: README.adoc
crates/anf_gfx/: Cargo.toml  buffers.rs  geom.rs  geom2d.rs  lib.rs  texture.rs
crates/anf_gfx/batcher/: batch.rs  batch_push.rs  batcher.rs  bufspecs.rs  data.rs  mod.rs  primitives.rs
crates/anf_gfx/cmd/: mod.rs  params.rs  params_build.rs  push.rs  push_cmd.rs  push_params.rs
crates/anf_gfx/fna3d_hie/: buffers.rs  pipeline.rs  shader.rs
crates/anf_gfx/geom3d/: matrix.rs  mod.rs  plane.rs  quaternion.rs  vec.rs
crates/anf_gfx/pipeline/: mod.rs  pipeline.rs  shader.rs
crates/anf_gfx/texture/: mod.rs  sprite.rs  texture.rs
crates/anf_lib/: Cargo.toml  lib.rs
crates/fna3d_hie/: Cargo.toml  buffers.rs  lib.rs  pipeline.rs  shader.rs  todo.rs
crates/fna3d_hie/vertex/: Cargo.toml
crates/imgui_fna3d/: Cargo.toml
crates/imgui_fna3d/src/: fna3d_renderer.rs  helper.rs  lib.rs  renderer.rs  sdl2_backend.rs  sdl2_helper.rs
docs/: README.adoc  TODOs.adoc  anf.adoc  fna3d.adoc  resources.adoc  rust_ffi_to_c.adoc
examples/: pong.rs
examples/fixed_context/: context.rs  framework.rs  grid2d.rs  main.rs  scene.rs
examples/fixed_context/base/: context.rs  framework.rs  mod.rs  scene.rs
examples/fixed_context/games/: input.rs  mod.rs  pong.rs  rl.rs  tiled.rs  tiles.rs
examples/fixed_context/render/: mod.rs  tiled.rs  tiled_render.rs
examples/fixed_context/rl/: fov.rs  map.rs  mod.rs  rlmap.rs  view.rs
examples/fixed_context/utils/: anim.rs  grid2d.rs
examples/samples/: scene.rs
examples/samples/games/: mod.rs  rl.rs  tiles.rs
examples/samples/render/: tiled_render.rs
examples/samples/rl/: fov.rs  view.rs
examples/samples/utils/: grid2d.rs  mod.rs
samples/: README.adoc  cargo.toml
samples/crates/: README.adoc
samples/crates/imgui_fna3d/: Cargo.toml
samples/src/: lib.rs  main.rs
samples/src/base/: context.rs  framework.rs  mod.rs
samples/src/games/: media.rs  rl.rs  tiles.rs
samples/src/render/: tiled_render.rs
samples/src/rl/: fov.rs  fow.rs  mod.rs  rlmap.rs
samples/src/utils/: anim.rs  mod.rs
src/: app.rs  bin.rs  game.rs  gfx.rs  lib.rs  prelude.rs  prim.rs  utils.rs  vfs.rs  window.rs
src/app/: framework.rs  mod.rs
src/app/prelude/: draw.rs  lifecycle.rs  mod.rs  time.rs
src/batch/: batch_data.rs  batch_internals.rs  batch_push.rs  draw.rs  mod.rs
src/engine/: app.rs  draw.rs  lifecycle.rs  mod.rs  time.rs  utils.rs
src/engine/builtin/: mod.rs
src/engine/core/: clock.rs  lifecycle.rs  mod.rs  window.rs
src/engine/embedded/: mod.rs
src/framework/: app.rs  core.rs  game.rs  game_loop.rs  mod.rs  startup.rs  time.rs  window.rs
src/framework/gameloop/: mod.rs  time.rs
src/framework/utils/: mod.rs
src/game/: app.rs  draw.rs  framework.rs  lifecycle.rs  mod.rs  time.rs  utils.rs
src/gfx/: buffers.rs  font.rs  img.rs  mod.rs  prelude.rs  texture.rs  vertices.rs
src/input/: keyboard.rs  mod.rs  mouse.rs  vinput.rs
src/preset/: mod.rs
(+48 files in other folders)
