[package]
name = "anf"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

[workspace]
members = ["crates/anf_gfx", "crates/fna3d_hie"]
exclude = ["crates/rust-fna3d", "samples"]

[dependencies]
sdl2 = "0.34.3"
fna3d = { path = "crates/rust-fna3d/fna3d" }
fna3d_hie = { path = "crates/fna3d_hie" }
anf_gfx = { path = "crates/anf_gfx" }

log = "0.4.11"
num_enum = "0.5.1"
anyhow = "1.0.32"
