[package]
name = "anf"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "crates/anf_gfx",
    "crates/ass",
    "crates/fna3d_hie",
    # "crates/soloud-rs/soloud",
    "crates/xdl"
]

exclude = ["crates/soloud-rs", "crates/rust-fna3d"]

[features]
default = ["asset", "font", "input", "audio"]

asset = ["ass"]
font = ["fna3d-fontstash"]
input = ["xdl"]
audio = ["soloud"]

debug-gui = ["imgui", "fna3d-imgui"]

[dependencies]
num_enum = "0.5.1"

log = "0.4.11"
anyhow = "1.0.32"
indoc = "1.0.2"

sdl2 = "0.34.3"
fna3d = { path = "crates/rust-fna3d/fna3d" }
# fna3h = { path = "crates/rust-fna3d/fna3h" }
fna3d_hie = { path = "crates/fna3d_hie" }
anf_gfx = { path = "crates/anf_gfx" }

# optional dependencies (included by default)
fna3d-fontstash = { path = "crates/rust-fna3d/fna3d-fontstash", optional = true }
ass = { path = "crates/ass", optional = true }
xdl = { path = "crates/xdl", optional = true }
soloud = { path = "crates/soloud-rs/soloud", optional = true }

# optional dependencies (exluded by default)
imgui = { version = "0.5.0", optional = true }
fna3d-imgui = { path = "crates/rust-fna3d/fna3d-imgui", optional = true }
